[project]
name = "workflow-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=1.7.5",
    "browser-use>=0.5.5",
    "google-genai>=1.26.0",
    "openai>=1.97.0",
    "playwright>=1.53.0",
    "scikit-learn>=1.7.1",
    "stagehand>=0.4.1",
]
